Build with jdk21 (#11219)